--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/AntonTymchenko/goit-js-hw-11-promisification.git"
   },
   "keywords": [],
-  "author": "Anton Tymchenko <timchenkov_@net.ukr>",
+  "author": "Anton Tymchenko <timchenkov_@ukr.net>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
